# project-gameph

./: .gitignore  README.md  main.py  pyinstaller.spec  pyproject.toml
.github/workflows/: build-executables.yml
client/: camera.py  chat.py  client_main.py  input_handler.py  interpolation.py  menu.py  renderer.py  sprites.py
client/assets/: README.md
config/: combat.yaml  economy.yaml  game.yaml  map.yaml  minions.yaml  neutrals.yaml  structures.yaml
data/: heroes.py
scripts/: gen_all.py  gen_effects.py  gen_entities.py  gen_sprite_brawler.py  gen_sprite_kapre.py  gen_sprite_manananggal.py  gen_sprite_mender.py  gen_sprite_new_heroes.py  gen_sprite_pedro.py  gen_sprite_ranger.py  gen_sprite_tiktik.py  gen_sprites.py  gen_terrain.py  map_explorer.py  spritelib.py
server/: abilities.py  bind.py  effects.py  entity.py  game_state.py  net_handler.py  server_main.py  skills.py  systems.py  terrain.py
server/heroes/: __init__.py  _template.py  aswang.py  base.py  bonifacio.py  brawler.py  kapre.py  lastikman.py  mabini.py  (+9 more)
shared/: config.py  game_types.py  geometry.py  hero_schema.py  protocol.py  terrain.py
tests/: test_abilities.py  test_attack_commands.py  test_camera.py  test_combat.py  test_config_yaml.py  test_effects.py  test_entities.py  test_game_state.py  test_hud_wire.py  test_invisibility.py  test_items.py  test_kapre.py  test_lanes.py  test_lastikman.py  test_leveling.py  test_manananggal.py  test_map_features.py  test_minion_cc.py  test_protocol.py  test_sandbox.py  test_stats.py  test_systems.py  test_tiktik.py  test_tp_scroll.py  test_vision.py
(+5 files in other folders)
