[project]
name = "project-gameph"
version = "0.1.0"
description = "A lite MOBA game — 3v3 to 5v5 multiplayer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
    "msgpack>=1.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "server", "client"]
